--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "~2.14.1",
     "morgan": "~1.7.0",
     "nodemailer": "~2.5.0",
+    "prettyjson": "~1.1.3",
     "request": "~2.74.0",
     "winston": "~2.2.0"
   },
